Fixed main menu fixed positioning and wrapping. Fixed bug on page.php template that was displaying an error.

--- a/css/src/_layout.scss
+++ b/css/src/_layout.scss
@@ -1,9 +1,12 @@
 
 
 .main-menu {
-	@include clearfix;
-	background: $green;
-	text-align: center;
+
+	.menu-main-menu-container {
+		@include clearfix;
+		background: $green;
+		text-align: center;
+	}
 
 	ul {
 		
@@ -39,12 +42,17 @@
 	}
 
 	@include respond-to( 768px ) {
-			.home & {
+		.home & {
 			position: fixed;
 			top: 0;
 			left: 0;
 			right: 0;
 			z-index: 1000;
+
+			.menu-main-menu-container {
+				max-width: 1220px;
+				margin: 0 auto;
+			}
 		}
 	}
 }
